graph representation python break

--- a/08_Ch_9_Symmetric_Matrices/104-Graph.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/104-Graph.ipynb
@@ -261,7 +261,21 @@
     "0 & 0 & 1 & 1\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "::::"
+    "::::\n",
+    "\n",
+    "## Python Break: Programming with Graphs!\n",
+    "\n",
+    "In this section, we'll detail how we can build our own framework for working with graphs in Python. Recall that graphs are determined by a set of vertices $\\{v_1, v_2, \\dots, v_n \\}$ and a set of edges $\\{e_1, e_2, \\dots, e_m\\}$, so to represent a graph in Python we need to find ways of representing these objects:\n",
+    "\n",
+    "* Traditionally, the vertices are not explictly stored. Instead, the number of vertices $n$ in the graph is stored, and the vertices are assumed to be the integers $0, 1, \\dots, n - 1$.\n",
+    "\n",
+    "* There are two common ways of representing the edges:\n",
+    "\n",
+    "    * **Adjacency matrix representation.** Here, we store the adjacency matrix (defined above) as a 2D array `adj[n][n]`, such that `adj[i][j] = 1` if there is an edge from `i` to `j` in the graph and `adj[i][j] = 0` otherwise.\n",
+    "\n",
+    "    * **Adjacency list representation.** Here, we store adjacency information as an array of sets `neighbors[n]` such that `j in neighbors[i]` if and only if there is an edge from `i` to `j` in the graph. This is common when the graph is sparse, i.e., when there aren't a lot of edges, because storing the entire adjacency matrix can take a lot of space if $n$ is large.\n",
+    "\n",
+    "Below is a Python snippet implementing an adjacency list representation of an *undirected* graph:"
    ]
   },
   {
@@ -269,6 +283,61 @@
    "metadata": {},
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/08_Ch_9_Symmetric_Matrices/104-Graph.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of edges in g: 4\n",
+      "Number of edges in g: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self, n):\n",
+    "        self.n_vertices = n\n",
+    "        self.neighbors = [set() for _ in range(n)]\n",
+    "\n",
+    "    def add_edge(self, i, j):\n",
+    "        self.neighbors[i].add(j)\n",
+    "        self.neighbors[j].add(i)\n",
+    "\n",
+    "    def n_edges(self):\n",
+    "        return int(sum([len(s) for s in self.neighbors]) / 2)\n",
+    "\n",
+    "g = Graph(5)\n",
+    "g.add_edge(0, 1)\n",
+    "g.add_edge(1, 2)\n",
+    "g.add_edge(2, 0)\n",
+    "g.add_edge(3, 4)\n",
+    "\n",
+    "print('Number of edges in g:', g.n_edges())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we just have some code to add edges to a graph and count the number of edges in it. Can you try to draw the graph that this represents?\n",
+    "\n",
+    "There are many interesting problems that we can solve on graphs; to name a few:\n",
+    "\n",
+    "* finding the shortest path between vertices $i$ and $j$ (known to be efficiently solvable);\n",
+    "\n",
+    "* deciding whether there is a path between every vertex in a graph (known to be efficiently solvable);\n",
+    "\n",
+    "* deciding whether a graph has a given subgraph (known to be NP-complete);\n",
+    "\n",
+    "* deciding whether two graphs are isomorphic, i.e., if we can \"renumber\" their vertices to get the same graph (unknown computational complexity).\n",
+    "\n",
+    "This isn't even the tip of the iceberg, and if you take a computer science class like CIS 1210, CIS 2620, or CIS 3200, then you'll study graph problems and their practical applications in much more detail. In the next page, in light of our study of the consensus problem, we'll describe how to solve the second problem: deciding whether there is a path between every vertex if a graph (deciding if the graph is \"connected\")."
    ]
   }
  ],
@@ -288,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
