finished up graphs python break with some bfs/dfs examples

--- a/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
@@ -54,13 +54,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TO DO**: NumPy examples "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Consensus Protocols \n",
     "\n",
     "Consider a collection of $N$ agents that communicate along a set of undirected links described by a graph $G$. Each agent has state $x_i(t) \\in \\mathbb{R}$, with initial value $x_i(0)$, and together, they wish to determine the average of the initial states $\\text{avg}(\\vv x(0)) = \\frac{1}{N} \\sum_{i=1}^N x_i(0)$.\n",
@@ -219,7 +212,148 @@
     "\\begin{bmatrix} \\vv x_1^* \\\\ \\vv x_2^* \\end{bmatrix} = \\begin{bmatrix} \\vv 1 \\\\ \\vv 0 \\end{bmatrix} \\text{avg}(\\vv x_1(0)) + \\begin{bmatrix} \\vv 0 \\\\ \\vv 1 \\end{bmatrix} \\text{avg}(\\vv x_2(0)).\n",
     "$$\n",
     "\n",
-    "This is of course expected, as all we have done is rewrite [](#decouple) using block vectors and matrices --- we have not changed anything about the consensus protocol."
+    "This is of course expected, as all we have done is rewrite [](#decouple) using block vectors and matrices --- we have not changed anything about the consensus protocol.\n",
+    "\n",
+    "## Python Break: Determining if a Graph is Connected!\n",
+    "\n",
+    "In this section, let's look at an efficient algorithm to check if an (undirected) graph $G$ is connected, i.e., has exactly one connected component. Of course, we showed above that the zero eigenvalue has algebraic multiplicity one in the Laplacian of $G$ if and only if $G$ is connected, which gives us one avenue of attack: to find the eigenvalues of $G$.\n",
+    "\n",
+    "In this section, we will explore how a much simpler class of algorithms, known as graph traversal algorithms, can be used to find the connected components of a graph (and count how many there are). The particular class of algorithm we will look at are called *tree-based graph* traversal algorithms. At a high level, the algorithm starts maintains a set of visited vertices, and at each step, chooses an unvisited vertex that is adjacent to a visited vertex and visits it; the algorithm starts at an arbitrary vertex. A visual can be found below:\n",
+    "\n",
+    "![alt text](../figures/09-graph_traversal.png)\n",
+    "\n",
+    "From left to right, top to bottom, we see that at each iteration, we choose a vertex (marked in blue) that is adjacent to a green vertex and make it green (visit it). If we start this procedure from a vector $v$, then this procedure will in fact visit all vertices in the connected component of $v$. Try to convince yourself of this fact! To start, recall that $u$ is in the connected component of $v$ if and only if there is a path $P = v\\to \\dots \\to u$ from $v$ to $u$ in the graph.\n",
+    "\n",
+    "Below, we have an implementation of this procedure in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edges of g:\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(1, 2)\n",
+      "(3, 4)\n",
+      "Connected component of 0: {0, 1, 2}\n",
+      "Connected component of 1: {0, 1, 2}\n",
+      "Connected component of 2: {0, 1, 2}\n",
+      "Connected component of 3: {3, 4}\n",
+      "Connected component of 4: {3, 4}\n",
+      "\n",
+      "Edges of h:\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 4)\n",
+      "(1, 2)\n",
+      "(3, 4)\n",
+      "Connected component of 0: {0, 1, 2, 3, 4}\n",
+      "Connected component of 1: {0, 1, 2, 3, 4}\n",
+      "Connected component of 2: {0, 1, 2, 3, 4}\n",
+      "Connected component of 3: {0, 1, 2, 3, 4}\n",
+      "Connected component of 4: {0, 1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from random import randrange\n",
+    "random.seed(6928)\n",
+    "\n",
+    "class Graph:\n",
+    "    def __init__(self, n):\n",
+    "        self.n_vertices = n\n",
+    "        self.neighbors = [set() for _ in range(n)]\n",
+    "\n",
+    "    def add_edge(self, i, j):\n",
+    "        self.neighbors[i].add(j)\n",
+    "        self.neighbors[j].add(i)\n",
+    "\n",
+    "    def n_edges(self):\n",
+    "        return int(sum([len(s) for s in self.neighbors]) / 2)\n",
+    "    \n",
+    "    def print_edges(self):\n",
+    "        for v in range(self.n_vertices):\n",
+    "            for neighbor in self.neighbors[v]:\n",
+    "                if neighbor > v:\n",
+    "                    print('(' + str(v) + ', ' + str(neighbor) + ')')\n",
+    "\n",
+    "    def connected_component(self, v):\n",
+    "        cc = set()\n",
+    "\n",
+    "        visited = [False for _ in range(self.n_vertices)]\n",
+    "        frontier = [v]\n",
+    "\n",
+    "        while len(frontier) > 0:\n",
+    "            index = randrange(len(frontier))\n",
+    "            v = frontier.pop(index)\n",
+    "            if visited[v]:\n",
+    "                continue\n",
+    "\n",
+    "            visited[v] = True\n",
+    "            cc.add(v)\n",
+    "            for neighbor in self.neighbors[v]:\n",
+    "                frontier.append(neighbor)\n",
+    "\n",
+    "        return cc\n",
+    "\n",
+    "g = Graph(5)\n",
+    "g.add_edge(0, 1)\n",
+    "g.add_edge(1, 2)\n",
+    "g.add_edge(2, 0)\n",
+    "g.add_edge(3, 4)\n",
+    "\n",
+    "print('Edges of g:')\n",
+    "g.print_edges()\n",
+    "print('Connected component of 0:', g.connected_component(0))\n",
+    "print('Connected component of 1:', g.connected_component(1))\n",
+    "print('Connected component of 2:', g.connected_component(2))\n",
+    "print('Connected component of 3:', g.connected_component(3))\n",
+    "print('Connected component of 4:', g.connected_component(4))\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "h = Graph(5)\n",
+    "h.add_edge(0, 1)\n",
+    "h.add_edge(1, 2)\n",
+    "h.add_edge(2, 0)\n",
+    "h.add_edge(3, 4)\n",
+    "h.add_edge(0, 4)\n",
+    "\n",
+    "print('Edges of h:')\n",
+    "h.print_edges()\n",
+    "print('Connected component of 0:', h.connected_component(0))\n",
+    "print('Connected component of 1:', h.connected_component(1))\n",
+    "print('Connected component of 2:', h.connected_component(2))\n",
+    "print('Connected component of 3:', h.connected_component(3))\n",
+    "print('Connected component of 4:', h.connected_component(4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above, we define two graphs `g` and `h` and find the connected component corresponding to each vertex in the two graphs using the `connected_components` function. Note that `g` has two connected components, `{0, 1, 2}` and `{3, 4}` whereas `h` has only one connected component `{0, 1, 2, 3, 4}`, meaning that `h` is connected and `g` is not.\n",
+    "\n",
+    "Let's understand how this algorithm implements the procedure we described above. At a high level, at each iteration of the while loop, the `cc` set will contain all the vertices we have already visited (the `visited` array will also indicate which vertices we have already visited), and the `frontier` list will contain all the unvisited vertices *adjacent* to any vertex we have already visited. At each iteration of the while loop, we pick a random vertex in the `frontier` list and visit it, and then repeat until there are no more vertices to explore (i.e., we have explored the entire connected component). At the end of this procedure, the `cc` set will contain all the vertices in our connected component!\n",
+    "\n",
+    "To conclude, we have a few remarks about the way we choose vertices from the `frontier` list. Currently, we randomly select vertices from this list, but we can instead use an arbitrary rule to choose which vertex instead. For example:\n",
+    "\n",
+    "* If we choose the vertex in `frontier` which was added *earliest* (out of all vertices which are in `frontier`), then this algorithm is called *breadth-first search*, or BFS.\n",
+    "\n",
+    "* If we choose the vertex in `frontier` which was *most recently added*, then this algorithm is called *depth-first search*, or DFS.\n",
+    "\n",
+    "A visual of BFS versus DFS is below:\n",
+    "\n",
+    "![alt text](../figures/09-bfs_dfs.png)\n",
+    "\n",
+    "If you take a computer science class, you'll definitely see these very commonly used algorithms in a lot more detail!"
    ]
   },
   {
@@ -246,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
