--- a/12_Ch_13_Optimization/144-SGD.ipynb
+++ b/12_Ch_13_Optimization/144-SGD.ipynb
@@ -336,7 +336,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "user_expressions": []
+   },
    "source": [
     "## Deep MLPs\n",
     "\n",
@@ -697,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
