fixed some page indexing

--- a/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
@@ -365,15 +365,14 @@
     "\\begin{align*}\n",
     "    \\bold v \\cdot \\bold w = \\| \\bold v \\| \\| \\bold w \\| \\cos(\\theta),\n",
     "\\end{align*}\n",
-    "where $\\theta$ is the angle between $\\bold v$ and $\\bold w$ [(reminder image)](#../figures/04-angle.png). Notice that as stated, the dot product is sensitive to the length of $\\bold v, \\bold w$. Therefore, if we are only interested in the alignment of two vectors, it suffices only to consider the $\\cos(\\theta)$, which is $1$ if $\\bold v$ and $\\bold w$ are pointing the same direction, $-1$ if they are pointing directly opposite, and $0$ if they are perpendicular. This is often called the [cosine similarity](https://en.wikipedia.org/wiki/Cosine_similarity).\n",
+    "where $\\theta$ is the angle between $\\bold v$ and $\\bold w$. Notice that as stated, the dot product is sensitive to the length of $\\bold v, \\bold w$. Therefore, if we are only interested in the alignment of two vectors, it suffices only to consider the $\\cos(\\theta)$, which is $1$ if $\\bold v$ and $\\bold w$ are pointing the same direction, $-1$ if they are pointing directly opposite, and $0$ if they are perpendicular. This is often called the [cosine similarity](https://en.wikipedia.org/wiki/Cosine_similarity).\n",
     ":::{prf:definition} Cosine similarity\n",
     ":label: cosine_similarity\n",
-    "\n",
-    "    The cosine similarity between two vectors $\\bold v, \\bold w \\in \\R^\\ell$ is defined as:\n",
-    "    $$\n",
-    "        \\mathrm{sim}(\\bold v, \\bold w) := \\frac{\\bold v \\cdot \\bold w}{\\|\\bold v\\| \\| \\bold w \\|} = \\cos(\\theta).\n",
-    "    $$\n",
-    "    One can verify that the cosine similarity is bounded between $[-1,1]$.\n",
+    "The cosine similarity between two vectors $\\bold v, \\bold w \\in \\R^\\ell$ is defined as:\n",
+    "$$\n",
+    "    \\mathrm{sim}(\\bold v, \\bold w) := \\frac{\\bold v \\cdot \\bold w}{\\|\\bold v\\| \\| \\bold w \\|} = \\cos(\\theta).\n",
+    "$$\n",
+    "One can verify that the cosine similarity is bounded between $[-1,1]$.\n",
     ":::\n",
     "Now let us print the words that are deemed \"most similar\" to \"algebra\" in the latent space and verify that the cosine similarity is indeed being used."
    ]
