--- a/07_Ch_8_Iteration/093a-more-page-rank.ipynb
+++ b/07_Ch_8_Iteration/093a-more-page-rank.ipynb
@@ -8,10 +8,10 @@
    },
    "source": [
     "---\n",
-    "title: \"8.3 Case Study: Implementing a Mini-Page-Rank\"\n",
+    "title: \"8.4 Case Study: Implementing a Mini-Page-Rank\"\n",
     "subject:  Iteration\n",
     "subtitle: ranking websites\n",
-    "short_title: \"8.3 Case Study: Implementing a Mini-Page-Rank\"\n",
+    "short_title: \"8.4 Case Study: Implementing a Mini-Page-Rank\"\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -310,7 +310,7 @@
     "user_expressions": []
    },
    "source": [
-    "Unfortunately, there are some columns in the transition that are all $0$, corresponding to webpages that have no outgoing links. This implies that the transition matrix in its current form is not a [regular transition matrix](./092-Markov_Chains.ipynb#regular_defn). To see why this is problematic, consider a web-user starting on page $3$, i.e. $\\bold x(1) = \\bm 0 & 0 & 1 & 0 & 0 & 0 \\em^\\top$. Since there are no outgoing links, the next state vector will be $\\bold x(2) = \\bold x(1)$, ensuring that it remains at $\\bold x(1)$ for all time. Similarly, since there are incoming links to these dead-end webpages, iterating the transition matrix will shift more and more weight from other webpages that have outgoing links to the dead-end links. \n",
+    "Unfortunately, there are some columns in the transition that are all $0$ apart from the diagonal entry, corresponding to webpages that have no outgoing links. This implies that the transition matrix in its current form is not a [regular transition matrix](./092-Markov_Chains.ipynb#regular_defn). To see why this is problematic, consider a web-user starting on page $3$, i.e. $\\bold x(1) = \\bm 0 & 0 & 1 & 0 & 0 & 0 \\em^\\top$. Since there are no outgoing links, the next state vector will be $\\bold x(2) = \\bold x(1)$, ensuring that it remains at $\\bold x(1)$ for all time. Similarly, since there are incoming links to these dead-end webpages, iterating the transition matrix will shift more and more weight from other webpages that have outgoing links to the dead-end links. \n",
     "\n",
     "Not only is this behavior undesirable--we don't want to put undue weight on websites just because they have no outgoing links--this also implies that the long-run $\\bold x(k)$ becomes dependent on the initial distribution. For example, starting at page 3 will have $\\bold x(k) = \\bm 0 & 0 & 1 & 0 & 0 & 0 \\em^\\top$ for all $k$, whereas starting at page 5 will have $\\bold x(k) = \\bm 0 & 0 & 0 & 0 & 1 & 0 \\em^\\top$ for all $k$."
    ]
