--- a/12_Ch_13_Optimization/144a-case-study-training-NN.ipynb
+++ b/12_Ch_13_Optimization/144a-case-study-training-NN.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "## The CIFAR-10 Dataset\n",
     "\n",
-    "In previous lectures and case studies, we have seen classifying handwritten digits as a recurring setting. This is largely due to historical importance and subsequent popularity of the [MNIST dataset](https://yann.lecun.com/exdb/mnist/), which was one of the key domino pieces leading to the current deep learning boom. The MNIST dataset has some nice properties: the data is rather clean and rather unambiguous for humans, leaving engineering models as the main challenge to get computers to perform comparably (if not better). For this reason, a dataset of comparable importance in deep learning is the [CIFAR-10/100](https://www.cs.toronto.edu/~kriz/cifar.html) (Canadian Institute For Advanced Research) dataset.\n",
+    "In previous lectures and case studies, we have seen classifying handwritten digits as a recurring setting. This is largely due to historical importance and subsequent popularity of the [MNIST dataset](https://yann.lecun.com/exdb/mnist/), which was one of the key domino pieces leading to the current deep learning boom. The MNIST dataset has some nice properties: the data is rather clean and unambiguous for humans, leaving designing performant models as the main challenge to get computers to perform comparably (if not better). For this same reason, a dataset of comparable importance to MNIST in deep learning is the [CIFAR-10/100](https://www.cs.toronto.edu/~kriz/cifar.html) (Canadian Institute For Advanced Research) dataset.\n",
     "\n",
     "In particular, CIFAR-10 like MNIST is comprised of small, labelled images belonging to one of 10 classes. Whereas in MNIST these 10 classes were the 10 digits, the 10 classes of CIFAR-10 are various real-world things: 'plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', and 'truck'. The classification task is therefore harder than in MNIST, since the photos are generally more \"in the wild\", more diverse within each class (think of all the breeds of dogs!), and are representations of 3-D objects, rather than 2-D writing.\n",
     "\n",
@@ -374,7 +374,7 @@
     "\\end{align*}\n",
     "i.e. fully following the stochastic gradient. A momentum parameter of $\\alpha \\in (0,1)$ instead yields\n",
     "\\begin{align*}\n",
-    "\\theta^{(k+1)} = \\alpha \\theta^{(k)} - (1 - \\alpha) \\eta d^{(k)},\n",
+    "\\theta^{(k+1)} = \\theta^{(k)} - \\eta[\\alpha \\theta^{(k)} +  (1 - \\alpha) d^{(k)}],\n",
     "\\end{align*}\n",
     "in other words the previous iterate carries some \"momentum\". Momentum is essential in machine learning contexts where the small batches relative to the dataset can yield highly stochastic iterates, preventing a model from committing too hard to a bad draw of SGD.\n",
     "\n",
@@ -689,6 +689,17 @@
     "plt.xlabel('true label (test set)')\n",
     "plt.ylabel('predicted label (test set)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f99ff6b6-54cd-463e-9bf1-12906edaf25b",
+   "metadata": {
+    "tags": [],
+    "user_expressions": []
+   },
+   "source": [
+    "Somewhat predictably, our CNN encounters the highest confusion when distinguishing between the various mammals."
    ]
   }
  ],
