--- a/03_Ch_4_Orthogonality/057-case_study_ls_classification.ipynb
+++ b/03_Ch_4_Orthogonality/057-case_study_ls_classification.ipynb
@@ -374,9 +374,9 @@
    "source": [
     "At a surface level, classification bears some differences to the regression set-up we've seen in the last few chapters. For one, the *outcome* or *response variable* $y$ in classification is categorical, for example the species of Iris flower, whereas in regression they are numerical and generally continuous. Also, whereas geometrically regression is \"fitting a curve\", it is not so clear what \"curve\" we are fitting in classification.\n",
     "\n",
-    "Since our goal is to best predict (read: fit) the class, an immediate idea is to cast the categorical labels into numbers (e.g. integer indices $0,1,2$), and then do regression on numerical labels. To transform back to a final categorical prediction, we can do something like round, then output the variable associated with the integer.\n",
+    "Since our goal is to best predict (read: fit) the class, an immediate idea is to cast the categorical labels into numbers (e.g. integer indices $0,1,2$), and then do regression. To transform back to a final categorical prediction, we can round, then output the variable associated with the integer.\n",
     "\n",
-    "For example, associating $\\bm \\mathrm{virginica} & \\mathrm{setosa} & \\mathrm{versicolor} \\em$ with $\\bm 0 & 1 & 2 \\em$, fitting $\\bold x = \\bm \\mathrm{sep\\;len} & \\mathrm{sep\\;width} & \\mathrm{pet\\;len} & \\mathrm{pet\\;width} \\em^\\top \\in \\R^4$ to $\\bold y \\in [0,2]$ becomes a regression problem, on which we can apply linear least-squares:\n",
+    "For example, associating $(\\mathrm{virginica},  \\mathrm{setosa}, \\mathrm{versicolor})$ with $(0,  1, 2)$, fitting $\\bold x = \\bm \\mathrm{sep\\;len} & \\mathrm{sep\\;width} & \\mathrm{pet\\;len} & \\mathrm{pet\\;width} \\em^\\top \\in \\R^4$ to $\\bold y \\in [0,2]$ becomes a regression problem, on which we can apply linear least-squares:\n",
     "$$\n",
     "\\bold y = \\boldsymbol \\beta^\\top \\bold x + c = \\bm \\boldsymbol \\beta \\\\ c \\em^\\top \\bm \\bold x \\\\ 1 \\em,\n",
     "$$\n",
@@ -806,7 +806,7 @@
    "source": [
     "### The Confusion Matrix\n",
     "\n",
-    "Just as in the [handwritten digit classification case study](../02_Ch_3_Inner_Products_and_Norms/045-handwritten_digits.ipynb)), we can get a finer-grained understanding of which classes our classifier had trouble differentiating through the confusion matrix. Recall that the entries of the confusion matrix $\\bold C = [c_{ij}]$ represent the number of times our classifier predicted label $i$ when the true label was $j$, such that the diagonal elements $c_{ii}$ represent the number of times label $i$ was predicted correctly."
+    "Just as in the [handwritten digit classification case study](../02_Ch_3_Inner_Products_and_Norms/045-handwritten_digits.ipynb), we can get a finer-grained understanding of which classes our classifier had trouble differentiating through the confusion matrix. Recall that the entries of the confusion matrix $\\bold C = [c_{ij}]$ represent the number of times our classifier predicted label $i$ when the true label was $j$, such that the diagonal elements $c_{ii}$ represent the number of times label $i$ was predicted correctly."
    ]
   },
   {
@@ -876,7 +876,7 @@
     "user_expressions": []
    },
    "source": [
-    "From the confusion matrix, we can glean that \"versicolor\" is hard for our classifier to get right, often predicting both other species instead of it. The other two species seem to be rather well-lassified, with minimal errors."
+    "From the confusion matrix, we can glean that \"versicolor\" is hard for our classifier to get right, often predicting both other species instead of it. The other two species seem to be rather well-classified, with minimal errors."
    ]
   }
  ],
