--- a/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
+++ b/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "### What exactly is a convolution?\n",
     "\n",
-    "We introduce the mathematical basis for convolutional layers. We won't sweat too much on the practical details, which are more appropriate for a deep learning course like ESE 5460. From the graphics above, one can gather than a convolution layer passes a filter (read: matrix) over sliding patches of the input and produces a (usually) smaller output.\n",
+    "We introduce the mathematical basis for convolutional layers. We won't sweat too much on the practical details, which are more appropriate for a deep learning course like ESE 5460. From the graphics above, one can gather that a convolution layer passes a filter (read: matrix) over sliding patches of the input and produces a (usually) smaller output.\n",
     ":::{figure}./144a-training-NN/CNN-filter-animation.gif\n",
     ":label:conv_layer\n",
     ":alt:conv_layer\n",
@@ -309,7 +309,7 @@
     "\\begin{align*}\n",
     "    (K,B): k \\times k + (n-2k)\\times (n-2k) = 5k^2 - 4nk + n^2 \\approx n^2  \\text{ parameters}\n",
     "\\end{align*}\n",
-    "If we had used a fully-connected MLP to map between the $n \\times n$ input and $(n-2k)\\times (n-2k)$ output, we come to a parameter count of \n",
+    "If we had used a fully-connected MLP layer to map between the $n \\times n$ input and $(n-2k)\\times (n-2k)$ output, we come to a parameter count of \n",
     "\\begin{align*}\n",
     "    (W_{\\mathrm{MLP}}, b_{\\mathrm{MLP}}) \\to n^2 \\times (n-2k)^2 + (n-2k)^2 \\approx n^4 \\text{ parameters},\n",
     "\\end{align*}\n",
