pip installs for torch/torchivision

--- a/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
+++ b/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
@@ -44,6 +44,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "11dcd4ca-42f7-4c99-be46-2268871da629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to install the required software packages for deep learning: this will take about 10min\n",
+    "%pip install torch torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "0c53dbd3-f8d7-469a-b742-c4c0fa91eb58",
    "metadata": {
@@ -719,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
