--- a/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
+++ b/12_Ch_13_Optimization/145-case-study-training-NN.ipynb
@@ -33,8 +33,7 @@
    "cell_type": "markdown",
    "id": "fa356385-422c-42d4-bc50-7789b8487248",
    "metadata": {
-    "tags": [],
-    "user_expressions": []
+    "tags": []
    },
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/12_Ch_13_Optimization/144a-case-study-training-NN.ipynb)\n",
