--- a/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "id": "65e7f9fa-a4a1-43a7-a67f-12c40279aa17",
    "metadata": {
-    "tags": [],
-    "user_expressions": []
+    "tags": []
    },
    "source": [
     "---\n",
@@ -20,7 +19,7 @@
     "      - University of Pennsylvania\n",
     "    email: ttz2@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: sample notes, ese 2030, linear algebra\n",
+    "keywords:\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -35,22 +34,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a3df04c6-4276-4157-90ff-35209886ef7c",
+   "cell_type": "markdown",
+   "id": "17ebc24c-90e7-46e0-8150-e65f3c8e0028",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (1737113250.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb)\u001b[0m\n\u001b[0m                                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
-     ]
-    }
-   ],
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb)"
    ]
   },
   {
