wrote out the name of the spectral factoriaztion theorem

--- a/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "If we use this orthonormal eigenbasis when diagonalizing a symmetric matrix $A$, we obtain its _spectral factorization_:\n",
     "\n",
-    ":::{prf:theorem}\n",
+    ":::{prf:theorem} The Spectral Factorization\n",
     ":label: spectral_thm\n",
     "Let $A$ be a real symmetric matrix. Then there exists an orthogonal matrix $Q$ such that\n",
     "\\begin{equation}\n",
